@@ -1,2 +1,2 @@
 PostgreSQL
-Jouni Ahto, Zeev Suraski, Yasuo Ohgaki
+Jouni Ahto, Zeev Suraski, Yasuo Ohgaki, Chris Kings-Lynne
