@@ -7,6 +7,13 @@ PostgreSQL copy functions
 
 include('config.inc');
 
+$db = pg_connect($conn_str);
+
+$rows = pg_copy_to($db, $table_name);
+
+pg_query($db, "DELETE FROM $table_name");
+
+pg_copy_from($db, $table_name, $rows);
 
 echo "OK";
 
