@@ -13,6 +13,11 @@ $enc = pg_client_encoding($db);
 
 pg_set_client_encoding($db, $enc);
 
+if (function_exists('pg_set_error_verbosity')) {
+	pg_set_error_verbosity(PGSQL_ERRORS_TERSE);
+	pg_set_error_verbosity(PGSQL_ERRORS_DEFAULT);
+	pg_set_error_verbosity(PGSQL_ERRORS_VERBOSE);
+}
 echo "OK";
 ?>
 --EXPECT--
